--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class="main">
                 <h1>How can I track my order?</h1>
-                <p>you can track your order using the following steps:</p>
+                <p class="paraone">you can track your order using the following steps:</p>
                 <ol>
                     <li>Go to the order <span>Tracking page.</span></li>
                     <li>Enter your order number and email address.</li>
